package appointments

import (
	"context"

	pb "github.com/salahfarzin/appointment/proto" // Update with the actual path to your proto package
)

type AppointmentHandler struct {
	service AppointmentService
}

func NewAppointmentHandler(service AppointmentService) *AppointmentHandler {
	return &AppointmentHandler{service: service}
}

func (h *AppointmentHandler) CreateAppointment(ctx context.Context, req *pb.CreateAppointmentRequest) (*pb.CreateAppointmentResponse, error) {
	// Implement the logic to create an appointment
}

func (h *AppointmentHandler) UpdateAppointment(ctx context.Context, req *pb.UpdateAppointmentRequest) (*pb.UpdateAppointmentResponse, error) {
	// Implement the logic to update an appointment
}

func (h *AppointmentHandler) GetAppointment(ctx context.Context, req *pb.GetAppointmentRequest) (*pb.GetAppointmentResponse, error) {
	// Implement the logic to retrieve an appointment
}

func (h *AppointmentHandler) ListAppointments(ctx context.Context, req *pb.ListAppointmentsRequest) (*pb.ListAppointmentsResponse, error) {
	// Implement the logic to list appointments
}
